test quick-nav fix. Hopefully resolves the horizontal scrollbar issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,13 +93,12 @@ footer {
 
 .quick-nav-bar {
   display: flex;
-  position: absolute;
+  position: relative;
   background-color: var(--light-green);
   color: #fff;
   justify-content: space-evenly;
   align-items: center;
   border: var(--border) var(--dark-green);
-  width: 99.9%;
   height: 50px;
 }
 
@@ -587,7 +586,7 @@ footer * p {
     align-self: center;
     justify-content: center;
     gap: 10rem;
-    margin-top: 5rem;
+    margin-top: 1rem;
   }
 
   .explore-together-content {
